fix pdf figure alignment & get svg generation working for web

--- a/full/style/style.css
+++ b/full/style/style.css
@@ -8,3 +8,7 @@ body.madoko {
   font-size: 80%;
   text-rendering: optimizeLegibility;
 }
+
+.madoko p {
+  text-align: inherit;
+}
